# mcp-document-intelligence

./: .gitignore  MCP_Setup.ipynb  README.md  client.py  mcp_server.py  pyproject.toml
