[project]
name = "quick-mcp-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "chromadb>=1.4.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "mcp>=1.25.0",
    "openai>=2.14.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
]
